--- a/src/app.css
+++ b/src/app.css
@@ -32,9 +32,10 @@
 @source "../node_modules/flowbite-svelte-icons/dist";
 @source "../node_modules/@flowbite-svelte-plugins/chart/dist";
 
-@layer base {
-  /* disable chrome cancel button */
-  input[type="search"]::-webkit-search-cancel-button {
-    display: none;
-  }
+input[type="search"]::-webkit-search-cancel-button {
+  display: none;
+}
+
+button:not(:disabled) {
+  cursor: pointer;
 }
